--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="text-3xl font-extrabold mb-2">REKAT</div>
       <div class="text-xl font-semibold opacity-95">Ruang Edukasi Kolaborasi Aktivitas Trensains Tebuireng</div>
       <p class="text-sm opacity-80 mt-4 border-t border-white/30 pt-4">
-        Platform terintegrasi untuk mendukung aktivitas edukasi, kolaborasi, dan manajemen data sekolah.
+        Platform terintegrasi untuk mendukung aktivitas edukasi, dan kolaborasi.
       </p>
     </div>
 
